--- a/app/views/admin_tours/_form.html.erb
+++ b/app/views/admin_tours/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(tour) do |f| %>
-  <% if tour.errors.any? %>
+<%= form_for(admin_tour) do |f| %>
+  <% if admin_tour.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(tour.errors.count, "error") %> prohibited this tour from being saved:</h2>
+      <h2><%= pluralize(admin_tour.errors.count, "error") %> prohibited this admin_tour from being saved:</h2>
 
       <ul>
-      <% tour.errors.full_messages.each do |message| %>
+      <% admin_tour.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
