--- a/app/views/admin/tours/show.html.erb
+++ b/app/views/admin/tours/show.html.erb
@@ -10,5 +10,5 @@
   <%= @tour.date_fin %>
 </p>
 
-<%= link_to 'Edit', edit_tour_path(@tour) %> |
-<%= link_to 'Back', tours_path %>
+<%= link_to 'Edit', edit_admin_tour_path(@tour) %> |
+<%= link_to 'Back', admin_tours_path %>
