--- a/app/views/admin/candidates/show.html.erb
+++ b/app/views/admin/candidates/show.html.erb
@@ -1,4 +1,21 @@
 <p id="notice"><%= notice %></p>
 
+
+<p>
+  <%= @candidate.affiliation %>
+</p>
+<p>
+  <%= @candidate.prenom %>
+</p>
+<p>
+  <%= @candidate.nom %>
+</p>
+<p>
+  <%= @candidate.descriptif %>
+</p>
+<p>
+  <%= @candidate.photo %>
+</p>
+
 <%= link_to 'Edit', edit_candidate_path(@candidate) %> |
 <%= link_to 'Back', admin_candidates_path %>
