--- a/app/views/admin/candidates/show.html.erb
+++ b/app/views/admin/candidates/show.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-
 <p>
   <%= @candidate.affiliation %>
 </p>
@@ -13,9 +12,6 @@
 <p>
   <%= @candidate.descriptif %>
 </p>
-<p>
-  <%= @candidate.photo %>
-</p>
-
+<%= image_tag  @candidate.photo %>
 <%= link_to 'Edit', edit_candidate_path(@candidate) %> |
 <%= link_to 'Back', admin_candidates_path %>
