ajout de la fonctionnalité log-in / log-out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,11 @@
 
   <body>
     <div id="user_nav">
-<% if current_user %>
-  Logged In as <%= current_user.name %>
-  <%= link_to "log out", log_out_path %>
+<% if current_admin %>
+  Logged In as <%= current_admin.login %>
+  <%= link_to "admin_log out", admin_log_out_path %>
 <% else %>
-<%= link_to "Sign Up", sign_up_path %>
-<%= link_to "log in", log_in_path %>
+<%= link_to "log in", admin_log_in_path %>
 <% end %>
 </div>
 
