--- a/app/views/admin/admins/_form.html.erb
+++ b/app/views/admin/admins/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(admin) do |f| %>
-  <% if admin.errors.any? %>
+<%= form_for([:admin, @admin]) do |f| %>
+  <% if @admin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(admin.errors.count, "error") %> prohibited this admin from being saved:</h2>
 
