--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 
   <body>
     <div id="user_nav">
+      
 <% if current_user %>
-  Logged In as <%= current_user.name %>
+  Logged In as <%= current_user.name %> <%= current_user.forname %>
   <%= link_to "log out", log_out_path %>
 <% else %>
 <%= link_to "Sign Up", sign_up_path %>
