--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -22,6 +22,25 @@
         <td><%= candidate.affiliation %></td>
         <td><%= candidate.photo %></td>
         <td><%= candidate.descriptif %></td>
+        <td>
+        <%= form_for :vote, :url => {:action=>"create", :controller=>"votes"} do |f| %>
+        <div class="field">
+        <%= f.hidden_field :id_candidate, :value=>123  %>
+        </div>
+        <div class="field">
+        <%= f.hidden_field :code_postal, :value=>123  %>
+        </div>
+        <div class="field">
+        <%= f.hidden_field :bureau_de_vote, :value=>12  %>
+        </div>
+        <div class="field">
+        <%= f.hidden_field :id_tour, :value=>1  %>
+        </div>
+        <div class="actions">
+        <%= f.submit %>
+        </div>
+                <% end %>
+          </td>
         <td><%= link_to 'Show', candidate_path(candidate) %></td>
       </tr>
     <% end %>
