--- a/app/views/admin/connexions/index.html.erb
+++ b/app/views/admin/connexions/index.html.erb
@@ -1,7 +1,7 @@
 <h1>FONCTIONNALITÉS BACKOFFICE</h1>
 
 <ul>
-	<li>Gestion administration</li>
+	<li>Gestion administrateurs</li>
 	<li>Gestion électeurs</li>
 	<li>Gestion candidats</li>
 	<li>Gestion tours</li>
