--- a/app/views/admin/connexions/index.html.erb
+++ b/app/views/admin/connexions/index.html.erb
@@ -1,9 +1,9 @@
 <h1>FONCTIONNALITÉS BACKOFFICE</h1>
 
 <ul>
-	<li>Gestion administrateurs</li>
-	<li>Gestion électeurs</li>
-	<li>Gestion candidats</li>
-	<li>Gestion tours</li>
-	<li>Gestion résultats</li>
+	<li><%= link_to 'Gestion des administrateurs', admin_admins_path %></li>
+	<li><%= link_to 'Gestion des électeurs', admin_users_path %></li>
+	<li><%= link_to 'Gestion des tours', admin_tours_path %></li>
+	<li><%= link_to 'Gestion des candidats', admin_tours_path %></li>
+	<li><%= link_to 'Gestion des résultats', admin_tours_path %></li>
 </ul>
