--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,26 @@
 <% end %>
 </div>
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <%= link_to root_path, class:"navbar-brand" do %>
+         <%= image_tag "logoelec.png"%>
+      <% end %>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">S'identifier</a></li>
+        <li><a href="#">Voter</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 <% flash.each do |name, msg| %>
 <%= content_tag :div, msg, :id => "flash_(name)" %>
 <% end %>
