--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,17 +29,18 @@
       <% end %>
     </div>
 
-    <% if current_user %>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>  <%= link_to "Accueil", candidates_path %></li>
-        <li>  <%= link_to "S'identifier", new_connexion_path %></li>
-        <li>  <%= link_to "Voter", elections_path %> </li>
+        <% if current_user %>
+        <li>  <%= link_to "Se désidentifier", log_out_path %></li>
+        <% else %>
+        <li>  <%= link_to "S'identifier", log_in_path %></li>
+        <% end %>
+        <li>  <%= link_to "Voter", candidates_path %> </li>
       </ul>
     </div><!-- /.navbar-collapse -->
-    <% end %>
-
   </div><!-- /.container-fluid -->
 </nav>
 
