Mise en place de la home sur front

--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,56 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-
-<h1>Candidates</h1>
-
 <% if current_user %>
   <%= link_to 'Je Vote', candidates_path %>
 <% else %>
   <%= link_to 'Connexion', new_session_path %>
 <% end %>
-<table>
-  <thead>
-    <tr>
-      <th>Nom</th>
-      <th>Prenom</th>
-      <th>Affiliation</th>
-      <th>Photo</th>
-      <th>Descriptif</th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @candidates.each do |candidate| %>
-      <tr>
-        <td><%= candidate.nom %></td>
-        <td><%= candidate.prenom %></td>
-        <td><%= candidate.affiliation %></td>
-        <td><%= candidate.photo %></td>
-        <td><%= candidate.descriptif %></td>
-        <td>
-        <%= form_for :vote, :url => {:action=>"create", :controller=>"votes"} do |f| %>
-        <div class="field">
-        <%= f.hidden_field :id_candidate, :value=>123  %>
-        </div>
-        <div class="field">
-        <%= f.hidden_field :code_postal, :value=>123  %>
-        </div>
-        <div class="field">
-        <%= f.hidden_field :bureau_de_vote, :value=>12  %>
-        </div>
-        <div class="field">
-        <%= f.hidden_field :id_tour, :value=>1  %>
-        </div>
-        <div class="actions">
-        <%= f.submit %>
-        </div>
-                <% end %>
-          </td>
-        <td><%= link_to 'Show', candidate_path(candidate) %></td>
-      </tr>
-    <% end %>
-  </tbody>
 
 
-</table>
+<h1><%= link_to 'Je vote', action:"vote"%></h1>
+
+
+<h2>Bloc légal</h2>
+<p>
+Affichage du bloc légal : bullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshit<br/>
+bullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshit<br/>
+bullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshitbullshit<br/>
+</p>
+
+
+<h2>Les candidats</h2>
+<% @candidates.each do |candidate| %>
+  <div>
+      <%= candidate.prenom %> <strong><%= candidate.nom %></strong>
+  </div>
+
+  <div><%= image_tag candidate.photo %></div>
+
+  <div><%= candidate.affiliation %></div>
+
+  <!-- lien vers un candidat -->
+  <div><%= link_to 'Show',
+      candidate_path(candidate)%></div>
+<% end %>
