--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -3,10 +3,30 @@
 <h1>Votes</h1>
 
 <table>
-  
+  <thead>
+    <tr>
+      <th>Id candidate</th>
+      <th>Code postal</th>
+      <th>Bureau de vote</th>
+      <th>Id tour</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
   <tbody>
-   <div>Affichage des résultats</div>
+    <% @votes.each do |vote| %>
+      <tr>
+        <td><%= vote.id_candidate %></td>
+        <td><%= vote.code_postal %></td>
+        <td><%= vote.bureau_de_vote %></td>
+        <td><%= vote.id_tour %></td>
+        <td><%= link_to 'Show', vote %></td>
+        <td><%= link_to 'Edit', edit_vote_path(vote) %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
 <br>
+
+<%= link_to 'New Vote', new_vote_path %>
