Ajout des backlinks sur le site

--- a/app/views/admin/connexions/index.html.erb
+++ b/app/views/admin/connexions/index.html.erb
@@ -4,6 +4,6 @@
 	<li><%= link_to 'Gestion des administrateurs', admin_admins_path %></li>
 	<li><%= link_to 'Gestion des électeurs', admin_users_path %></li>
 	<li><%= link_to 'Gestion des tours', admin_tours_path %></li>
-	<li><%= link_to 'Gestion des candidats', admin_tours_path %></li>
-	<li><%= link_to 'Gestion des résultats', admin_tours_path %></li>
+	<li><%= link_to 'Gestion des candidats', admin_candidates_path %></li>
+	<li><%= link_to 'Gestion des résultats', admin_votes_path %></li>
 </ul>
