--- a/app/views/candidates/vote.html.erb
+++ b/app/views/candidates/vote.html.erb
@@ -26,16 +26,16 @@
         <td>
         <%= form_for :vote, :url => {:action=>"create", :controller=>"votes"} do |f| %>
         <div class="field">
-        <%= f.hidden_field :id_candidate, :value=>123  %>
+        <%= f.hidden_field :id_candidate, :value=> candidate.id  %>
         </div>
         <div class="field">
-        <%= f.hidden_field :code_postal, :value=>123  %>
+        <%= f.hidden_field :code_postal, :value=> current_user.postal %>
         </div>
         <div class="field">
-        <%= f.hidden_field :bureau_de_vote, :value=>12  %>
+        <%= f.hidden_field :bureau_de_vote, :value=> current_user.bureau %>
         </div>
         <div class="field">
-        <%= f.hidden_field :id_tour, :value=>1  %>
+        <%= f.hidden_field :id_tour, :value=> cookies[:tour] %>
         </div>
         <div class="actions">
         <%= f.submit %>
