--- a/app/views/admin/connexions/index.html.erb
+++ b/app/views/admin/connexions/index.html.erb
@@ -1,4 +1,4 @@
-<h1>FONCTIONNALITÉS BACKOFFICE</h1>
+<h1>Page d'accueil du Back-Office</h1>
 
 <ul>
 	<li><%= link_to 'Gestion des administrateurs', admin_admins_path %></li>
