--- a/app/views/admin/tours/show.html.erb
+++ b/app/views/admin/tours/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Date debut:</strong>
+  <strong>Date de début :</strong>
   <%= @tour.date_debut %>
 </p>
 
 <p>
-  <strong>Date fin:</strong>
+  <strong>Date de fin :</strong>
   <%= @tour.date_fin %>
 </p>
 
-<%= link_to 'Edit', edit_admin_tour_path(@tour) %> |
-<%= link_to 'Back', admin_tours_path %>
+<%= link_to 'Modifier le tour', edit_admin_tour_path(@tour) %> |
+<%= link_to 'Retour', admin_tours_path %>
