--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,10 +1,10 @@
-<h1>Sign Up</h1>
+<h1>Ajouter un nouvel utilisateur</h1>
   <%= form_for([:admin, @user]) do |f| %>
-    <p> Nom:</br> <%= f.text_field :name%> </p>
-    <p> Prenom:</br> <%= f.text_field :forname%> </p>
-    <p> Code:</br> <%= f.password_field :encrypted_code%> </p>
-    <p> Code Postal:</br> <%= f.text_field :postal%> </p>
-    <p> Bureau de poste:</br> <%= f.text_field :bureau%> </p>
+    <p> Nom :</br> <%= f.text_field :name%> </p>
+    <p> Prénom :</br> <%= f.text_field :forname%> </p>
+    <p> Code :</br> <%= f.password_field :encrypted_code%> </p>
+    <p> Code Postal :</br> <%= f.text_field :postal%> </p>
+    <p> Bureau de poste :</br> <%= f.text_field :bureau%> </p>
 
     <%= f.submit :Signup %>
   <% end %>
