--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -5,7 +5,7 @@
     <% if cookies[:tour] %>
       <%= link_to 'Je Vote', { :action => "vote"}, :class => "btn btn-lg btn-primary" %>
     <% else %>
-      L'election est fermée au vote
+      L'élection est fermée au vote.
     <% end %>
   <% else %>
   <%= link_to 'Connexion', new_session_path, class: "btn btn-lg btn-primary" %>
@@ -17,17 +17,17 @@
   <div class="panel-body">
     <ul>
       <li>
-        <p>1. : J'active mon compte en cliquant sur "connexion" et en rentrant mes identifiants reçus par lettre</p>
+        <p>1. J'active mon compte en cliquant sur "connexion" et en rentrant mes identifiants reçus par lettre</p>
         <%= image_tag "mail.png" %>
       </li>
 
       <li>
-        <p>2. : Je vote pour le candidat de mon choix en cliquant sur le bouton "VOTER" le jour du vote</p>
+        <p>2. Je vote pour le candidat de mon choix en cliquant sur le bouton "VOTER" le jour du vote</p>
         <%= image_tag "voting.png" %>
       </li>
 
       <li>
-        <p>3. : Je reviens pour consulter les résultats des élections </p>
+        <p>3. Je reviens pour consulter les résultats des élections </p>
         <%= image_tag "victorious.png" %>
       </li>
     </ul>
