--- a/app/views/admin/admins/edit.html.erb
+++ b/app/views/admin/admins/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Admin</h1>
+<h1>Modifier l'administrateur</h1>
 
 <%= render 'form', admin: @admin %>
 
-<%= link_to 'Show', admin_admins_path %> |
-<%= link_to 'Back', admin_admins_path %>
+<%= link_to 'Voir le compte adminsitrateur', admin_admins_path %> |
+<%= link_to 'Retour à la liste des administrateurs', admin_admins_path %>
