--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Admins</h1>
+<h1>Liste des administrateurs</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Login</th>
-      <th>Password</th>
-      <th>Statut</th>
+      <th>Identifiants</th>
+      <th>Mot de passe</th>
+      <th>Statut d'administrateur</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +18,9 @@
         <td><%= admin.login %></td>
         <td><%= admin.password %></td>
         <td><%= admin.statut %></td>
-        <td><%= link_to 'Show', admin_admin_path(admin) %></td>
-        <td><%= link_to 'Edit', edit_admin_admin_path(admin) %></td>
-        <td><%= link_to 'Destroy', admin_admin_path(admin), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Voir le compte', admin_admin_path(admin) %></td>
+        <td><%= link_to 'Modifier le compte', edit_admin_admin_path(admin) %></td>
+        <td><%= link_to 'Supprimer le compte', admin_admin_path(admin), method: :delete, data: { confirm: 'Etes-vous sur de vouloir supprimer ce compte ? Cette opération est irréversible.' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,5 +28,5 @@
 
 <br>
 
-<%= link_to 'New Admin', new_admin_admin_path %>
+<%= link_to 'Créer un nouveau compte', new_admin_admin_path %>
 <%= link_to 'Retour', admin_connexions_path %>
