--- a/app/views/admin/admins/new.html.erb
+++ b/app/views/admin/admins/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Admin</h1>
+<h1>Créer un nouveau compte adminstrateur</h1>
 
 <%= render 'form', admin: [:admin, @admin] %>
 
-<%= link_to 'Back', admin_admins_path %>
+<%= link_to 'Retour à la liste des administrateurs', admin_admins_path %>
