--- a/app/views/admin/admins/show.html.erb
+++ b/app/views/admin/admins/show.html.erb
@@ -1,19 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Login:</strong>
+  <strong>Identifiants :</strong>
   <%= @admin.login %>
 </p>
 
 <p>
-  <strong>Password:</strong>
+  <strong>Mot de passe :</strong>
   <%= @admin.password %>
 </p>
 
 <p>
-  <strong>Statut:</strong>
+  <strong>Statut de l'administrateur:</strong>
   <%= @admin.statut %>
 </p>
 
-<%= link_to 'Edit', edit_admin_admin_path(@admin) %> |
-<%= link_to 'Back', admin_admins_path %>
+<%= link_to 'Modifier le compte', edit_admin_admin_path(@admin) %> |
+<%= link_to 'Retour à la liste des administrateurs', admin_admins_path %>
