--- a/app/views/admin/candidates/edit.html.erb
+++ b/app/views/admin/candidates/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing  Candidate</h1>
+<h1>Modifier le candidat</h1>
 
 <%= render 'form', candidate: @candidate %>
 
-<%= link_to 'Show', admin_candidate_path %> |
-<%= link_to 'Back', admin_candidates_path %>
+<%= link_to 'Voir le détail du candidat', admin_candidate_path %> |
+<%= link_to 'Retour à la liste des candidats', admin_candidates_path %>
