--- a/app/views/admin/candidates/new.html.erb
+++ b/app/views/admin/candidates/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New  Candidate</h1>
+<h1>Ajouter un candidat</h1>
 
 <%= render 'form', candidate: [:admin, @candidate] %>
 
-<%= link_to 'Back', admin_candidates_path %>
+<%= link_to 'Retour à la liste des candidats', admin_candidates_path %>
