--- a/app/views/admin/connexions/new.html.erb
+++ b/app/views/admin/connexions/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Connexion administration</h1>
+<h1>Connexion des administrateurs</h1>
   <%= form_tag admin_connexions_path do %>
-    <p> Nom:</br> <%= text_field_tag :login%> </p>
-    <p> Code:</br> <%= password_field_tag :password%> </p>
+    <p> Identifiants : </br> <%= text_field_tag :login%> </p>
+    <p> Mot de passe : </br> <%= password_field_tag :password%> </p>
     <%= submit_tag :connexion %>
   <% end %>
