--- a/app/views/admin/tours/edit.html.erb
+++ b/app/views/admin/tours/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Tour</h1>
+<h1>Modifier les données du tour</h1>
 
 <%= render 'form', tour: @tour %>
 
-<%= link_to 'Back', admin_tours_path %>
+<%= link_to 'Retour', admin_tours_path %>
