--- a/app/views/admin/tours/index.html.erb
+++ b/app/views/admin/tours/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Date debut</th>
-      <th>Date fin</th>
+      <th>Date de début</th>
+      <th>Date de fin</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= tour.date_debut %></td>
         <td><%= tour.date_fin %></td>
-        <td><%= link_to 'Show', admin_tour_path(tour) %></td>
-        <td><%= link_to 'Edit', edit_admin_tour_path(tour) %></td>
-        <td><%= link_to 'Destroy', admin_tour_path(tour), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Voir les détails du tour', admin_tour_path(tour) %></td>
+        <td><%= link_to 'Modifier le tour', edit_admin_tour_path(tour) %></td>
+        <td><%= link_to 'Supprimer le tour', admin_tour_path(tour), method: :delete, data: { confirm: 'Etes-vous sur de vouloir supprimer le tour ? Cette opération est irréversible (et va vous coûter cher !)' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,5 +26,5 @@
 
 <br>
 
-<%= link_to 'New Tour', new_admin_tour_path %>
+<%= link_to 'Créer un nouveau tour', new_admin_tour_path %>
 <%= link_to 'Retour', admin_connexions_path %>
