--- a/app/views/admin/tours/new.html.erb
+++ b/app/views/admin/tours/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Tour</h1>
+<h1>Créer un nouveau tour</h1>
 
 <%= render 'form', tour: [:admin, @tour] %>
 
-<%= link_to 'Back', admin_tours_path %>
+<%= link_to 'Retour', admin_tours_path %>
