--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,22 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Nom:</strong>
+  <strong>Nom :</strong>
   <%= @user.name %>
 </p>
 
 <p>
-  <strong>Prenom:</strong>
+  <strong>Prénom :</strong>
   <%= @user.forname %>
 </p>
 
 <p>
-  <strong>Code postal:</strong>
+  <strong>Code postal :</strong>
   <%= @user.postal %>
 </p>
 
 <p>
-  <strong>Bureau:</strong>
+  <strong>Bureau :</strong>
   <%= @user.bureau %>
 </p>
 
@@ -43,4 +43,4 @@
   <% end %>
 </p>
 
-<%= link_to 'Back', admin_users_path %>
+<%= link_to 'Retour', admin_users_path %>
