--- a/app/views/candidates/vote.html.erb
+++ b/app/views/candidates/vote.html.erb
@@ -1,16 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 
-<h1>Candidates</h1>
+<h1>Choisissez vos votes</h1>
 
 <table>
   <thead>
     <tr>
       <th>Nom</th>
-      <th>Prenom</th>
+      <th>Prénom</th>
       <th>Affiliation</th>
       <th>Photo</th>
-      <th>Descriptif</th>
       <th colspan="5"></th>
     </tr>
   </thead>
@@ -22,7 +21,6 @@
         <td><%= candidate.prenom %></td>
         <td><%= candidate.affiliation %></td>
         <td><%= candidate.photo %></td>
-        <td><%= candidate.descriptif %></td>
         <td>
         <%= form_for :vote, :url => {:action=>"create", :controller=>"votes"} do |f| %>
         <div class="field">
@@ -42,7 +40,7 @@
         </div>
                 <% end %>
           </td>
-        <td><%= link_to 'Show', candidate_path(candidate) %></td>
+        <td><%= link_to 'Voir les détails du candidat', candidate_path(candidate) %></td>
       </tr>
     <% end %>
   </tbody>
