--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(vote) do |f| %>
   <% if vote.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(vote.errors.count, "error") %> prohibited this vote from being saved:</h2>
+      <h2><%= pluralize(vote.errors.count, "error") %> a empeché cet enregistrement car :</h2>
 
       <ul>
       <% vote.errors.full_messages.each do |message| %>
