--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,11 @@
 
 <div id="user_nav">
 <% if current_user %>
-Logged In as <%= current_user.name %> <%= current_user.forname %>
-<%= link_to "log out", log_out_path %>
+Connecté en tant que <%= current_user.name %> <%= current_user.forname %>
+<%= link_to "log out", log_out_path, 'Se déconnecter' %>
 <% end %>
 <% if current_admin %>
-Logged In as <%= current_admin.login %>
+Connecté en tant que <%= current_admin.login %>
 <%= link_to "admin_log out", admin_log_out_path %>
 <% end %>
 </div>
