--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,11 +38,11 @@
 <div id="user_nav">
 <% if current_user %>
 Connecté en tant que <%= current_user.name %> <%= current_user.forname %>
-<%= link_to "log out", log_out_path, 'Se déconnecter' %>
+<%= link_to "Se déconnecter", log_out_path%>
 <% end %>
 <% if current_admin %>
-Connecté en tant que <%= current_admin.login %>
-<%= link_to "admin_log out", admin_log_out_path %>
+Connecté en tant qu'admin ! <%= current_admin.login %>
+<%= link_to "Se déconnecter", admin_log_out_path %>
 <% end %>
 </div>
 
