--- a/app/views/admin/candidates/edit.html.erb
+++ b/app/views/admin/candidates/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing  Candidate</h1>
-
-<%= render 'form', candidate: @candidate %>
-
+<div class="panel panel-default formulaire">
+  <div class="panel-heading">
+    Modifier Candidat
+  </div>
+<%= render 'form', candidate: [:admin, @candidate] %>
+</div>
 <%= link_to 'Show', admin_candidate_path %> |
 <%= link_to 'Back', admin_candidates_path %>
