--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,14 +84,95 @@ color:white !important;
   float:left;
  padding: 20px;
 }
+.list-group{
+margin-left:0;
+margin-right:0;
+
+}
 
 .media-left img{
   height: 40px;
 }
 
 .media-body{
-margin-top: 25px;
+padding-top: 20px !important;
 }
 
+#candidat img{
+  float: left;
+  width: 20%;
+}
+
+#candidat .blocText{
+  float: right;
+  width : 70%;
+}
+
+.boutons{
+  clear:both;
+  text-align: center;
+}
+
+.blocText h3{
+  text-align: center;
+  color: #0B6BA8;
+}
+
+.blocText p:nth-of-type(1){
+  text-align: center;
+  color: #76839a;
+}
+
+.formulaire{
+  width: 50%;
+  margin:auto;
+}
+
+.item{
+  width : 150px;
+  float: left;
+  padding: 8px;
+
+}
+
+.result{
+width:340px;
+margin: auto;
+}
+
+.list-group-item {
+min-height: 50px;
+}
+
+
+
+.item img{
+height:25px;
+}
+
+.grey{
+background-color: #f8f8f8 !important;
+height:50px;
+}
+
+.buttons{
+  text-align: right;
+}
+
+.list-group-item{
+  clear: both;
+}
+
+.center{
+  text-align: center;
+}
+
+h1{
+  text-align: center
+}
+
+.list-group{
+  margin-top: 20px;
+}
 
  @import "bootstrap"
