--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -1,32 +1,30 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Admins</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Login</th>
-      <th>Password</th>
-      <th>Statut</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @admins.each do |admin| %>
-      <tr>
-        <td><%= admin.login %></td>
-        <td><%= admin.password %></td>
-        <td><%= admin.statut %></td>
-        <td><%= link_to 'Show', admin_admin_path(admin) %></td>
-        <td><%= link_to 'Edit', edit_admin_admin_path(admin) %></td>
-        <td><%= link_to 'Destroy', admin_admin_path(admin), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h1> Administrateurs </h1>
+<div class="center">
+<%= link_to 'Ajouter un Admin', new_admin_admin_path , :class => "btn btn-primary" %>
+<%= link_to 'Retour', admin_connexions_path , :class => "btn btn-primary" %>
+</div>
+<ul class="list-group">
+  <li class="list-group-item grey">
+    <div class="item">Login</div>
+    <div class="item">Mot de passe</div>
+    <div class="item">Statut</div>
+  </li>
+  <% @admins.each do |admin| %>
+  <li class="list-group-item">
+    <div class="item"><%= admin.login %></div>
+    <div class="item"><%= admin.password %></div>
+    <% if admin.statut %>
+    <div class="item">validateur</div>
+    <% else %>
+    <div class="item">superadmin</div>
     <% end %>
-  </tbody>
-</table>
+    <div class="buttons">
+    <%= link_to 'Détail', admin_admin_path(admin), :class => "btn btn-primary" %>
+    <%= link_to 'Modifier', edit_admin_admin_path(admin), :class => "btn btn-primary" %>
+    <%= link_to 'Supprimer', admin_admin_path(admin), method: :delete, data: { confirm: 'Etes-vous sûr ?' }, :class => "btn btn-primary" %>
+    </div>
+  </li>
+  <% end %>
 
-<br>
-
-<%= link_to 'New Admin', new_admin_admin_path %>
-<%= link_to 'Retour', admin_connexions_path %>
+</ul>
