--- a/app/views/admin/candidates/_form.html.erb
+++ b/app/views/admin/candidates/_form.html.erb
@@ -1,42 +1,51 @@
-<%= form_for([:admin, @candidate])  do |f| %>
-  <% if @candidate.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(candidate.errors.count, "error") %> prohibited this candidate from being saved:</h2>
 
-      <ul>
-      <% @candidate.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+  <div class="panel-body">
+
+      <%=  form_for([:admin, @candidate], :html => {:class => 'form-horizontal'}) do |f| %>
+      <% if @candidate.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(candidate.errors.count, "error") %> prohibited this candidate from being saved:</h2>
+
+          <ul>
+          <% candidate.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :nom %>
-    <%= f.text_field :nom %>
+      <div class="form-group">
+        <%= f.label :nom, "Nom", :class => "col-sm-4 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_field :nom, :class => "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :prenom, "Prénom", :class => "col-sm-4 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_field :prenom, :class => "form-control"%>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :affiliation, "Affiliation", :class => "col-sm-4 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_field :affiliation, :class => "form-control"%>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :photo, "Photo", :class => "col-sm-4 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_field :photo, :class => "form-control"%>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :descriptif, "Descriptif", :class => "col-sm-4 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_area :descriptif, :class => "form-control"%>
+        </div>
+      </div>
+      <div class="boutons">
+        <%= f.submit "envoyer", :class => "btn btn-primary" %>
+      </div>
+      <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :prenom %>
-    <%= f.text_field :prenom %>
-  </div>
-
-  <div class="field">
-    <%= f.label :affiliation %>
-    <%= f.text_field :affiliation %>
-  </div>
-
-  <div class="field">
-    <%= f.label :photo %>
-    <%= f.text_field :photo %>
-  </div>
-
-  <div class="field">
-    <%= f.label :descriptif %>
-    <%= f.text_area :descriptif %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
