--- a/app/views/admin/candidates/new.html.erb
+++ b/app/views/admin/candidates/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New  Candidate</h1>
-
+<div class="panel panel-default formulaire">
+  <div class="panel-heading">
+    Ajouter Candidat
+  </div>
 <%= render 'form', candidate: [:admin, @candidate] %>
-
+</div>
 <%= link_to 'Back', admin_candidates_path %>
