--- a/app/views/admin/connexions/index.html.erb
+++ b/app/views/admin/connexions/index.html.erb
@@ -1,9 +1,13 @@
-<h1>FONCTIONNALITÉS BACKOFFICE</h1>
 
-<ul>
-	<li><%= link_to 'Gestion des administrateurs', admin_admins_path %></li>
-	<li><%= link_to 'Gestion des électeurs', admin_users_path %></li>
-	<li><%= link_to 'Gestion des tours', admin_tours_path %></li>
-	<li><%= link_to 'Gestion des candidats', admin_candidates_path %></li>
-	<li><%= link_to 'Gestion des résultats', admin_votes_path %></li>
-</ul>
+  <div class="panel panel-default ">
+    <div class="panel-heading">
+      FONCTIONNALITÉS BACKOFFICE
+    </div>
+    <div class="panel-body center">
+			<%= link_to 'Gestion des administrateurs', admin_admins_path, :class => "btn btn-primary" %>
+			<%= link_to 'Gestion des électeurs', admin_users_path, :class => "btn btn-primary" %>
+			<%= link_to 'Gestion des tours', admin_tours_path, :class => "btn btn-primary" %>
+			<%= link_to 'Gestion des candidats', admin_candidates_path, :class => "btn btn-primary" %>
+			<%= link_to 'Gestion des résultats', admin_votes_path, :class => "btn btn-primary" %>
+    </div>
+  </div>
