--- a/app/views/admin/tours/index.html.erb
+++ b/app/views/admin/tours/index.html.erb
@@ -1,30 +1,25 @@
-<p id="notice"><%= notice %></p>
+<h1> Tours </h1>
+<div class="center">
+<%= link_to 'Ajouter un Tour', new_admin_tour_path , :class => "btn btn-primary" %>
+<%= link_to 'Retour', admin_connexions_path , :class => "btn btn-primary" %>
+</div>
+<ul class="list-group">
+  <li class="list-group-item grey">
+    <div class="item">Ouverture</div>
+    <div class="item">Cloture</div>
+    <div class="item">Validation</div>
+  </li>
+  <% @tours.each do |tour| %>
+  <li class="list-group-item">
+    <div class="item"><%= tour.date_debut %></div>
+    <div class="item"><%= tour.date_fin %></div>
+    <div class="item">validé ?</div>
+    <div class="buttons">
+    <%= link_to 'Détail', admin_tour_path(tour), :class => "btn btn-primary" %>
+    <%= link_to 'Modifier', edit_admin_tour_path(tour), :class => "btn btn-primary" %>
+    <%= link_to 'Supprimer',admin_tour_path(tour), method: :delete, data: { confirm: 'Etes-vous sûr?' }, :class => "btn btn-primary" %>
+    </div>
+  </li>
+  <% end %>
 
-<h1>Tours</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Date debut</th>
-      <th>Date fin</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tours.each do |tour| %>
-      <tr>
-        <td><%= tour.date_debut %></td>
-        <td><%= tour.date_fin %></td>
-        <td><%= link_to 'Show', admin_tour_path(tour) %></td>
-        <td><%= link_to 'Edit', edit_admin_tour_path(tour) %></td>
-        <td><%= link_to 'Destroy', admin_tour_path(tour), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Tour', new_admin_tour_path %>
-<%= link_to 'Retour', admin_connexions_path %>
+</ul>
