--- a/app/views/admin/tours/new.html.erb
+++ b/app/views/admin/tours/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Tour</h1>
-
+<div class="panel panel-default formulaire">
+  <div class="panel-heading">
+    Modifier Tour
+  </div>
 <%= render 'form', tour: [:admin, @tour] %>
-
+</div>
 <%= link_to 'Back', admin_tours_path %>
