--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -3,10 +3,14 @@
   <div class="panel panel-default">
     <div class="panel-body">
       <%= image_tag @candidate.photo %>
+        <div class="blocText">
         <h3><%= @candidate.prenom %> <strong><%= @candidate.nom %></strong></h3>
         <p><%= @candidate.affiliation %></p>
         <p><%= @candidate.descriptif %></p>
-        <%= link_to 'Retour', :back, :class => "btn btn-primary btn-lg"  %>
+        </div>
+        <div class="boutons">
+        <%= link_to 'Retour', :back, :class => "btn btn-primary"  %>
+        </div>
     </div>
   </div>
 </div>
