--- a/app/views/candidates/vote.html.erb
+++ b/app/views/candidates/vote.html.erb
@@ -3,27 +3,16 @@
 
 <h1>Candidates</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nom</th>
-      <th>Prenom</th>
-      <th>Affiliation</th>
-      <th>Photo</th>
-      <th>Descriptif</th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @candidates.each do |candidate| %>
-      <tr>
-        <td><%= candidate.nom %></td>
-        <td><%= candidate.prenom %></td>
-        <td><%= candidate.affiliation %></td>
-        <td><%= candidate.photo %></td>
-        <td><%= candidate.descriptif %></td>
-        <td>
+<div class="row">
+  <div class="panel panel-default">
+    <div class="panel-heading">LES CANDIDATS A LA PRESIDENTIELLE</div>
+    <div class="panel-body">
+  <% @candidates.each do |candidate| %>
+  <div class="col-sm-12 col-md-6 candidates">
+      <%= image_tag candidate.photo %>
+      <%= link_to candidate_path(candidate) do %>
+        <h3><%= candidate.prenom %> <strong><%= candidate.nom %></strong></h3>
+        <p><%= candidate.affiliation %></p>
         <%= form_for :vote, :url => {:action=>"create", :controller=>"votes"} do |f| %>
         <div class="field">
         <%= f.hidden_field :id_candidate, :value=> candidate.id  %>
@@ -37,15 +26,16 @@
         <div class="field">
         <%= f.hidden_field :id_tour, :value=> cookies[:tour] %>
         </div>
-        <div class="actions">
-        <%= f.submit %>
+        <div class="center">
+        <% data ="Confirmez-vous votre vote pour #{candidate.prenom} #{candidate.nom} ?" %>
+        <%= f.submit "Voter", data: { confirm: data }, :class => "btn btn-primary" %>
         </div>
-                <% end %>
-          </td>
-        <td><%= link_to 'Show', candidate_path(candidate) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <% end %>
+      <% end %>
+      <div class="divider"> </div>
+  </div>
+  <% end %>
+</div>
+
 
 <%= link_to 'Retour à la page d\'accueil', candidates_path %>
