--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -14,9 +14,9 @@
     <div class="item"><%= admin.login %></div>
     <div class="item"><%= admin.password %></div>
     <% if admin.statut %>
-    <div class="item">validateur</div>
+    <div class="item">Admin Tech</div>
     <% else %>
-    <div class="item">superadmin</div>
+    <div class="item">Validateur</div>
     <% end %>
     <div class="buttons">
     <%= link_to 'Détail', admin_admin_path(admin), :class => "btn btn-primary" %>
