--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -40,8 +40,7 @@
   </div>
 </div>
 
-
-<<<<<<< HEAD
+<div>
     <ul class="list-group ">
       <li class="list-group-item grey">
         <div class="item">Candidat</div>
@@ -59,20 +58,6 @@
         <div class="item"><%= vote.created_at %></div>
       </li>
       <% end %>
-    </ul>
-=======
-      <tr>
-        <td><%= @candidates.find(result[0]).nom %></td>
-        <td><%= @candidates.find(result[0]).prenom %></td>
+    </ul>	
+</div>
 
-
-        <td><%= (result[1] * 100.0 / @votes.count).round(2) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'Nouveau vote', new_vote_path %>
->>>>>>> dev_hadrien
