--- a/app/views/admin/connexions/index.html.erb
+++ b/app/views/admin/connexions/index.html.erb
@@ -3,10 +3,13 @@
       FONCTIONNALITÉS BACKOFFICE
     </div>
     <div class="panel-body center">
+    <!-- Si l'administrateur est super admin -->
+    <% if @current_admin_statut == true %>
 			<%= link_to 'Gestion des administrateurs', admin_admins_path, :class => "btn btn-primary" %>
 			<%= link_to 'Gestion des électeurs', admin_users_path, :class => "btn btn-primary" %>
 			<%= link_to 'Gestion des tours', admin_tours_path, :class => "btn btn-primary" %>
 			<%= link_to 'Gestion des candidats', admin_candidates_path, :class => "btn btn-primary" %>
+    <% end %>
 			<%= link_to 'Gestion des résultats', admin_votes_path, :class => "btn btn-primary" %>
     </div>
   </div>
