--- a/app/views/admin/admins/_form.html.erb
+++ b/app/views/admin/admins/_form.html.erb
@@ -1,7 +1,3 @@
-<%= form_for([:admin, @admin]) do |f| %>
-  <% if @admin.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(admin.errors.count, "error") %> a empeché cet enregistrement car :</h2>
 
     <%=  form_for([:admin, @admin], :html => {:class => 'form-horizontal'}) do |f| %>
     <% if @admin.errors.any? %>
@@ -29,11 +25,11 @@
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :statut, "statut", :class => "col-sm-4 control-label" %>
+      <%= f.label :statut, "Statut", :class => "col-sm-4 control-label" %>
       <div class="col-sm-6">
-        <%= f.text_field :statut, :class => "form-control"%>
+        <%= f.select( :statut, "<option value='0' selected='selected'>Validateur</option><option value='1'>Admin Tech</option>".html_safe,{include_blank: ""}, {required: 'true', autofocus: 'true', class: 'form-control'}) %>
       </div>
-    </div>
+  </div>
     <div class="boutons">
       <%= f.submit "envoyer", :class => "btn btn-primary" %>
     </div>
