--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div class="panel panel-default formulaire">
   <div class="panel-heading">
     Ajouter Electeur
@@ -49,6 +48,39 @@
       </div>
       <div class="boutons">
         <%= f.submit "ajouter", :class => "btn btn-primary" %>
+      </div>
+      <% end %>
+  </div>
+</div>
+
+
+<div class="panel panel-default formulaire">
+  <div class="panel-heading">
+    Ajouter Electeur par CSV
+  </div>
+  <div class="panel-body">
+      <%=  form_for([:admin, @user], :html => {:multipart => true, :class => 'form-horizontal'}) do |f| %>
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(user.errors.count, "error") %> prohibited this admin from being saved:</h2>
+
+          <ul>
+          <% user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="form-group">
+        <%= f.label :file, "Select CSV file", :class => "col-sm-4 control-label" %>
+        <div class="col-sm-6">
+          <%= f.file_field :file, :class => "form-control" %>
+        </div>
+      </div>
+
+      <div class="boutons">
+        <%= f.submit "envoi", :class => "btn btn-primary" %>
       </div>
       <% end %>
   </div>
