--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div id="homeButton">
     <% if current_user %>
-      <% if cookies[:tour] %>
+      <% if cookies[:tour]  && @vote_status == false %>
         <%= link_to 'Je Vote', { :action => "vote"}, :class => "btn btn-lg btn-primary" %>
       <% else %>
         L'election est fermée au vote
