--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,7 +149,7 @@ padding: 8px;
 }
 
 .item img{
-  height:25px;
+  height:20px;
 }
 
 .grey{
@@ -163,6 +163,14 @@ padding: 8px;
 
 .list-group-item{
   clear: both;
+}
+
+#note{
+  width: 50%;
+  margin:auto;
+  text-align: center;
+  margin-bottom:20px;
+  margin-top:20px;
 }
 
 .center{
