--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,6 +9,8 @@
     <div class="item">Prénom</div>
     <div class="item">Code Postal</div>
     <div class="item">Bureau de Vote</div>
+    <div class="item">Tour 1</div>
+    <div class="item">Tour 2</div>
   </li>
   <% @users.each do |user| %>
   <li class="list-group-item">
@@ -16,9 +18,21 @@
     <div class="item"><%= user.forname %></div>
     <div class="item"><%= user.postal %></div>
     <div class="item"><%= user.bureau %></div>
-    <div class="buttons">
-      <%= link_to 'Détail', admin_user_path(user), :class => "btn btn-primary" %>
+    <div class="item">
+        <% if user.tour1 %>
+          <%= image_tag  "Check-icon.png" %>
+        <% else %>
+          Non voté
+        <% end %>
     </div>
+    <div class="item">
+        <% if user.tour2 %>
+          A voté
+        <% else %>
+          Non voté
+        <% end %>
+    </div>
+    
   </li>
   <% end %>
 </ul>
