--- a/app/views/admin/admins/_form.html.erb
+++ b/app/views/admin/admins/_form.html.erb
@@ -1,40 +1,34 @@
 <%= form_for([:admin, @admin]) do |f| %>
   <% if @admin.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(admin.errors.count, "error") %> a empeché cet enregistrement car :</h2>
+      <h2><%= pluralize(@admin.errors.count, "error") %> a empeché cet enregistrement car :</h2>
+      <ul>
+      <% @admin.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-    <%=  form_for([:admin, @admin], :html => {:class => 'form-horizontal'}) do |f| %>
-    <% if @admin.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(admin.errors.count, "error") %> prohibited this admin from being saved:</h2>
-
-        <ul>
-        <% admin.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
-
-    <div class="form-group">
-      <%= f.label :login, "Login", :class => "col-sm-4 control-label" %>
-      <div class="col-sm-6">
-        <%= f.text_field :login, :class => "form-control" %>
-      </div>
+  <div class="form-group">
+    <%= f.label :login, "Login", :class => "col-sm-4 control-label" %>
+    <div class="col-sm-6">
+      <%= f.text_field :login, :class => "form-control" %>
     </div>
-    <div class="form-group">
-      <%= f.label :password, "Mot de Passe", :class => "col-sm-4 control-label" %>
-      <div class="col-sm-6">
-        <%= f.password_field :password, :class => "form-control"%>
-      </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :password, "Mot de Passe", :class => "col-sm-4 control-label" %>
+    <div class="col-sm-6">
+      <%= f.password_field :password, :class => "form-control"%>
     </div>
-    <div class="form-group">
-      <%= f.label :statut, "statut", :class => "col-sm-4 control-label" %>
-      <div class="col-sm-6">
-        <%= f.text_field :statut, :class => "form-control"%>
-      </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :statut, "statut", :class => "col-sm-4 control-label" %>
+    <div class="col-sm-6">
+      <%= f.text_field :statut, :class => "form-control"%>
     </div>
-    <div class="boutons">
-      <%= f.submit "envoyer", :class => "btn btn-primary" %>
-    </div>
-    <% end %>
+  </div>
+  <div class="boutons">
+    <%= f.submit "envoyer", :class => "btn btn-primary" %>
+  </div>
+<% end %>
