--- a/app/views/admin/candidates/_form.html.erb
+++ b/app/views/admin/candidates/_form.html.erb
@@ -4,10 +4,10 @@
       <%=  form_for([:admin, @candidate], :html => {:class => 'form-horizontal'}) do |f| %>
       <% if @candidate.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(candidate.errors.count, "error") %> prohibited this candidate from being saved:</h2>
+          <h2><%= pluralize(@candidate.errors.count, "error") %> prohibited this candidate from being saved:</h2>
 
           <ul>
-          <% candidate.errors.full_messages.each do |message| %>
+          <% @candidate.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
           </ul>
