--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div class="panel panel-default formulaire">
   <div class="panel-heading">
     Ajouter Electeur
@@ -7,10 +6,10 @@
       <%=  form_for([:admin, @user], :html => {:class => 'form-horizontal'}) do |f| %>
       <% if @user.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(user.errors.count, "error") %> prohibited this admin from being saved:</h2>
+          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this admin from being saved:</h2>
 
           <ul>
-          <% user.errors.full_messages.each do |message| %>
+          <% @user.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
           </ul>
@@ -30,9 +29,9 @@
         </div>
       </div>
       <div class="form-group">
-        <%= f.label :code, "Code Confidentiel", :class => "col-sm-4 control-label" %>
+        <%= f.label :encrypted_code, "Code Confidentiel", :class => "col-sm-4 control-label" %>
         <div class="col-sm-6">
-          <%= f.password_field :code, :class => "form-control"%>
+          <%= f.password_field :encrypted_code, :class => "form-control"%>
         </div>
       </div>
       <div class="form-group">
